Make it possible to inject Keycloak admin client
closes: #26837